# rust-api

./: .gitignore  Cargo.toml
data/: webscraper.db
src/: api.rs  db.rs  main.rs  models.rs
