[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
env_logger = "0.9.0"
r2d2 = "0.8.9"
r2d2-sqlite3 = "0.1.1"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.72"
sqlite3 = "0.24.0"

[dev-dependencies]
actix-rt = "2.5.0"
